--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +11,7 @@
     tools:context=".ui.main.fragments.ResultFragment">
 
     <TextView
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="italic|bold"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
@@ -28,19 +28,6 @@
         android:gravity="center"
         android:layoutDirection="ltr"
         android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:orientation="horizontal">
-
 
                 <EditText
                     android:id="@+id/distance"
@@ -48,15 +35,15 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/distance"
                     android:inputType="numberDecimal"
-                    android:text="@string/ZERO" />
+                    android:text="@string/ZERO"
+                    android:autofillHints="@string/distance" />
 
                 <Spinner
+                    android:id="@+id/units"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/distances" />
 
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
